--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,10 @@
     <title>Code Mastery Lab - Free coding tutorials</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Coding Tutorials" name="keywords">
+    <meta content="Free Tutorials" name="keywords">
+    <meta content="Interview Questions" name="keywords">
     <meta content="Free Coding Tutorials and technical blogs" name="description">
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,12 +16,12 @@
 
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" rel="stylesheet">
-  
-  <!-- Customized Bootstrap Stylesheet -->
-  <link href="./assets/css/style.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+    
 <script>
   // JavaScript for copying code to clipboard
 document.addEventListener('DOMContentLoaded', function () {
