--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <meta content="Free Coding Tutorials" name="keywords">
     <meta content="Free Tutorials" name="keywords">
     <meta content="Interview Questions" name="keywords">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7791121643969630"
+     crossorigin="anonymous"></script>
     <meta content="Free Coding Tutorials and technical blogs" name="description">
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
