--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,10 @@
     <meta content="Free Coding Tutorials" name="keywords">
     <meta content="Free Tutorials" name="keywords">
     <meta content="Interview Questions" name="keywords">
+    <meta content="interview questions, technology, blog, engineer, career, preparation" name="keywords">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7791121643969630"
      crossorigin="anonymous"></script>
-    <meta content="Free Coding Tutorials and technical blogs" name="description">
+    <meta content="We provide interview questions for different technologies and blogs. We have a team of experienced engineers and writers who create high-quality questions that are relevant to the latest industry trends. Our questions are designed to help you prepare for your next interview and land your dream job." name="description">
   <base href="/">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Google Web Fonts -->
